test/syntax/fail/merge_not_enum.sync
let node f =
  merge 1 (true -> 0) (true -> 1)
